examples/v0.7/errors/function_argument_count.nova
fn add(a: N, b: N) {
}

add(1)